--- a/src/Styles.css
+++ b/src/Styles.css
@@ -9,7 +9,7 @@
 
 body{
     font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
-    background: #fafafa;
-    color: #333;
+    background: #ffffff;
+    color: #000000;
     overflow-x:hidden;
 }
