--- a/src/Styles.css
+++ b/src/Styles.css
@@ -3,13 +3,16 @@
     padding: 0;
     outline: 0;
     box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
     overflow-x: hidden;
-    overflow-y: auto;
 }
 
 body{
     font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
     background: #ffffff;
     color: #000000;
-    overflow-x:hidden;
+    overflow-x: hidden;
 }
