--- a/src/Styles.css
+++ b/src/Styles.css
@@ -11,7 +11,7 @@ html {
 }
 
 body{
-    font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+    font-family: Arial, sans-serif;
     background: #ffffff;
     color: #000000;
     overflow-x: hidden;
